# scuba

./: .gitignore  CLIENT_BMARK_PLAN.md  Cargo.toml  README.md  crosscomp.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml
apps/: README.md
apps/bench/: Cargo.toml  README.md  local_bmark_figuregen.ipynb  send_means_edit_post.txt  send_means_update_pass.txt
apps/bench/src/: .gitignore  client_benchmarks.ipynb  fam_bench.rs  main.rs  pass_bench.rs
apps/cmdline-auctioning/: .gitignore  Cargo.toml
apps/cmdline-auctioning/src/: main.rs
apps/cmdline-calendar/: Cargo.toml  README.md
apps/cmdline-calendar/src/: main.rs
apps/cmdline-chess/: Cargo.toml
apps/cmdline-chess/src/: main.rs
apps/cmdline-lightswitch/: Cargo.toml  README.md
apps/cmdline-lightswitch/src/: main.rs
apps/cmdline-password-manager/: .gitignore  Cargo.toml  README.md  passmanager.txt
apps/cmdline-password-manager/src/: main.rs
apps/cmdline-period-tracking/: Cargo.toml
apps/cmdline-period-tracking/src/: main.rs
apps/cmdline-skeleton/: Cargo.toml
apps/cmdline-skeleton/src/: main.rs
apps/cmdline-social-media/: Cargo.toml
apps/cmdline-social-media/src/: main.rs
apps/cmdline/auctioning/: Cargo.toml  README.md
apps/cmdline/auctioning/src/: main.rs
apps/cmdline/calendar/: Cargo.toml  README.md
apps/cmdline/calendar/src/: main.rs
apps/cmdline/chess/: Cargo.toml
apps/cmdline/chess/src/: main.rs
apps/cmdline/family-app/: .gitignore  Cargo.toml  README.md
apps/cmdline/family-app/src/: main.rs
apps/cmdline/lightswitch/: Cargo.toml
apps/cmdline/lightswitch/src/: main.rs
apps/cmdline/password-manager/: Cargo.toml  README.md
apps/cmdline/password-manager/src/: main.rs
apps/cmdline/period-tracking/: Cargo.toml
apps/cmdline/period-tracking/src/: main.rs
client/: BROKEN_CONTACTS.md  README.md  TEST_TIKZ.md  TODO.md
client-bench/: Cargo.toml  README.md  gen_figures.ipynb  parse_results.ipynb  recv_means_edit_post.txt  recv_means_update_pass.txt  requirements.txt
client-bench/src/: fam_bench.rs  main.rs  pass_bench.rs
client/core/: Cargo.toml  hash_vectors.rs  lib.rs  olm_wrapper.rs  server_comm.rs
client/core/benches/: .bench.rs.swp  bench.rs
client/core/server_comm/: Cargo.toml  lib.rs  main.rs
client/core/src/: .core.rs.swp  .lib.rs.swp  .main.rs.swp  core.rs  crypto.rs  hash_vectors.rs  lib.rs  main.rs  olm_wrapper.rs  server_comm.rs
client/data-abstraction/: Cargo.toml
client/data-abstraction/src/: contacts.rs  data.rs  devices.rs  glue.rs  groups.rs  lib.rs  rest.rs  sharing.rs
client/merged-serializable-noise-kv/: Cargo.toml
client/merged-serializable-noise-kv/src/: client.rs  data.rs  devices.rs
client/multi-key-dal/: Cargo.toml
client/multi-key-dal/src/: client.rs  lib.rs
client/multi-key-tank/: Cargo.toml
client/multi-key-tank/src/: client.rs  data.rs  devices.rs
client/noise-kv/: Cargo.toml
client/noise-kv/src/: client.rs  contacts.rs  data.rs  devices.rs  glue.rs  groups.rs  lib.rs  metadata.rs  permissions.rs  sharing.rs
client/rust-android-skeleton-parts/: NOISE_ANDROID.md  README.md  build.gradle
client/rust-android-skeleton-parts/app/: build.gradle
client/rust-android-skeleton-parts/app/src/main/java/com/example/rustskeleton/: MainActivity.kt
client/seq-lin-noise-kv/: Cargo.toml
client/seq-lin-noise-kv/src/: client.rs
client/sequential-noise-kv/: Cargo.toml
client/sequential-noise-kv/.cargo/: config.toml
client/sequential-noise-kv/src/: client.rs  data.rs  devices.rs  lib.rs  metadata.rs
client/serializable-noise-kv/: Cargo.toml
client/serializable-noise-kv/src/: client.rs  groups.rs  permissions.rs
client/single-key-dal/: Cargo.toml
client/single-key-dal/src/: client.rs
client/single-key-tank/: Cargo.toml
client/single-key-tank/src/: client.rs
client/tank/: Cargo.toml
client/tank/.cargo/: config.toml
client/tank/src/: client.rs  data.rs  devices.rs  metadata.rs
client/wasm-compat-core/: Cargo.toml
client/wasm-compat-core/src/: core.rs  lib.rs  server_comm.rs
server/: Cargo.toml  README.md  attestation-key
server-bench/: Cargo.toml
server-bench/src/: delete_attest_messages_bench.rs  main.rs
server-goose-bench/: Cargo.toml
server-goose-bench/src/: main.rs
server/src/: attestation.rs  attestation_proxy.rs  lib.rs  sequencer.rs  shard.rs
