[workspace]
resolver = "2"

members = [
    "client/core",
    "client/single-key-dal",
    "client/serializable-noise-kv",
    "apps/cmdline-lightswitch",
    "apps/cmdline-period-tracking",
    "apps/cmdline-chess",
    "apps/cmdline-social-media",
    "apps/cmdline-password-manager",
    "apps/cmdline-calendar",
    "apps/cmdline-auctioning",
    "server",
    "server-bench",
    "server-goose-bench",
]
