[workspace]
resolver = "2"

members = [
    "client/core",
    "client/single-key-tank",
    "client/multi-key-tank",
    "apps/cmdline/lightswitch",
    "apps/cmdline/period-tracking",
    "apps/cmdline/chess",
    "apps/cmdline/family-app",
    "apps/cmdline/password-manager",
    "apps/cmdline/calendar",
    "apps/cmdline/auctioning",
    "server",
    "server-bench",
    "server-goose-bench",
    "apps/bench",
]
