[workspace]
resolver = "2"

members = [
    "client/core",
    "client/tank",
    "apps/cmdline/auctioning",
    "apps/cmdline/calendar",
    "apps/cmdline/chess",
    "apps/cmdline/family-app",
    "apps/cmdline/lightswitch",
    "apps/cmdline/password-manager",
    "apps/cmdline/period-tracking",
    "server",
    "server-bench",
    "server-goose-bench",
    "client-bench",
]
