[package]
name = "noise-server-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.16"
tokio = { version = "^1.12", features = ["rt-multi-thread", "fs"] }
bincode = "1.3.3"

noise-server = { path = "../server" }
clap = "4.4.8"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
