[package]
name = "noise-server-goose-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
goose = "^0.17"
goose-eggs = "0.5.1"
rand = "0.8.5"
random-string = "1.0.0"
reqwest = "0.11.16"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = "^1.12"
bincode = "1.3.3"

noise-server = { path = "../server" }
clap = "4.4.8"
