[package]
name = "noise-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "noise_server_lib"
path = "src/lib.rs"

[[bin]]
name = "noise-server"
path = "src/bin/server.rs"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-lab = { version = "0.19.1", default-features = false }
base64 = "0.21.0"
bincode = "1.3.3"
blist = "0.0.4"
clap = { version = "4.1.13", features = ["derive"] }
ed25519-dalek = "1.0.1"
rand = "0.7"
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
sha2 = "0.10.6"
tokio = "1.26.0"
