[package]
name = "cmdline-lightswitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
futures = "0.3.26"
noise-core = { path = "../../client/core" }
reedline-repl-rs = { version = "1.0.3", features = ["async"] }
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["macros", "io-std", "io-util", "rt", "rt-multi-thread"] }
