[package]
name = "cmdline-lightswitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
futures = "0.3.26"
itertools = "0.10.5"
noise-kv = { path = "../../client/sequential-noise-kv" }
parking_lot = "0.12.1"
reedline-repl-rs = { version = "1.0.3", features = ["async"] }
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros", "io-std", "io-util", "rt", "rt-multi-thread"] }
uuid = "1.3.0"
yansi = "0.5.1"
