[package]
name = "cmdline-lightswitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
seq-lin-noise-kv = { path = "../../client/seq-lin-noise-kv" }
reedline-repl-rs = { version = "1.0.3", features = ["async"] }
tokio = { version = "1.25.0", features = ["macros", "io-std", "io-util", "rt", "rt-multi-thread"] }
uuid = "1.3.0"
