[package]
name = "cmdline-password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO want at least linearizability
seq-lin-noise-kv = { path = "../../client/seq-lin-noise-kv" }
reedline-repl-rs = { version = "1.0.3", features = ["async"] }
tokio = { version = "1.25.0", features = ["macros", "io-std", "io-util", "rt", "rt-multi-thread"] }
uuid = "1.3.0"
itertools = "0.10.5"
serde_json = "1.0.96"
serde = { version = "1.0.188", features = ["derive"] }
passwords = "3.1.16"
chrono = { version = "0.4.31", features = ["clock", "serde"] }
sha2 = "0.10.8"
base64ct = { version = "1.6.0", features = ["alloc"] }
