[package]
name = "noise-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
eventsource = "*"
eventsource-client = "0.11.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
urlencoding = "2.1.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["std"] }
olm-rs = "2.2.0"
log = "0.4.17"
sha2 = "0.10.6"
parking_lot = "0.12.1"
async-condvar-fair = { version = "1.0.0", features = ["parking_lot_0_12"] }
cbc = { version = "0.1.2", features = ["alloc"] }
aes = "0.8.2"
rand = "0.8.5"
