[package]
name = "scuba-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
eventsource-client = "0.11.0"
reqwest = { version = "0.11.13", features = ["json"] }
urlencoding = "2.1.2"
futures = "0.3.25"
tokio = { version = "1.27.0", features = ["macros"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["std"] }
olm-rs = "2.2.0"
log = "0.4.17"
sha2 = "0.10.6"
parking_lot = "0.12.1"
async-condvar-fair = { version = "1.0.0", features = ["parking_lot_0_12"] }
async-trait = "0.1.64"
aes = "0.8.2"
rand = "0.8.5"
cbc = { version = "0.1.2", features = ["alloc"] }
base64 = "0.21.0"
ed25519-dalek = "1.0.1"
bincode = "1.3.3"

scuba-server = { path = "../../server" }
aes-gcm = "0.10.3"

# for android cross-compilation
openssl = { version = "0.10.64", features = ["vendored"] }
