[package]
name = "wasm-compat-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
#http = "0.2.9"
tokio = { version = "1.23.0", features = ["macros", "sync"] }
url = "2.3.1"

[lib]
crate-type = ["cdylib"]
