[package]
name = "cmdline-auctioning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tank = { path = "../../../client/tank" }
reedline-repl-rs = { version = "1.0.3", features = ["async"] }
tokio = { version = "1.25.0", features = ["macros", "io-std", "io-util", "rt", "rt-multi-thread"] }
uuid = "1.3.0"
itertools = "0.10.5"
serde_json = "1.0.96"
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.31", features = ["clock", "serde"] }
