[package]
name = "server-comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
eventsource-client = "0.11.0"
reqwest = { version = "0.11.13", features = ["json"] }
urlencoding = "2.1.2"
futures = "0.3.25"
actix-rt = "2.7.0"

[lib]
name = "server_comm"
path = "lib.rs"
